@@ -47,6 +47,7 @@ setup(
                      'camelot_admin = camelot.bin.camelot_admin:main',
                      'camelot_manage = camelot.bin.camelot_manage:main',
                      'camelot_example = camelot_example.main:main',
+                     'camelot_mini_example = camelot_example.mini_main:main',
                     ]
                     },
     classifiers=[
